2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Expand to include
	tests for -setSize: as well as complex clipping paths

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test: Fix the TIFFs, which had some sub-images
	inadvertently set to greyscale.

2011-06-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test: New test to test how NSImage chooses
	an image rep to draw when many are available. Only a basic
	skeleton of a test is written so far.

	This should include testing: ICNS files with multiple icon sizes,
	TIFF files with	multiple icon sizes and the same DPI, TIFF files
	with multiple simage izes and different DPI (e.g. 64x64@72dpi
	and 256x256@288dpi)

2011-05-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* NSTextView-test/NSTextView-test.m: Test links (add a link on the
	second word of the lorem ipsum text to a wikipedia article)

2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* PixelExactDrawing-test: Add a new test case.

2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* PixelExactDrawing-test: Add a new test

2011-04-30  Eric Wasylishen  <ewasylishen@gmail.com>

	* MainMenu.gorm: Add an Edit and a Format menu.

2011-04-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* NSTextView-test/NSTextView-test.m: Test multiple layout managers
	per text storage, and multiple text views per layout manager.

2010-07-26  Fred Kiefer  <FredKiefer@gmx.de>

	* KeyboardInput-test/ConvertKeys.m: Correct setting for backspace key.

2010-07-25  Fred Kiefer  <FredKiefer@gmx.de>

	* KeyboardInput-test/ConvertKeys.m: Add support for backtab character.

2010-06-15 Riccardo Mottola

	* NSProgressIndicator-test:
	Added new test for the progress indicator

2010-04-14  Eric Wasylishen <ewasylishen@gmail.com>

	* Controller.m: On MinGW, display a main window so GSTest
	can be run when the WinUXTheme is enabled.
	* NSButton-test/NSButton-test.m: Add tooltips to the buttons.